@@ -60,7 +60,7 @@ BEGIN {
 
    while (my ($k, $v) = each %ERR) {
       next if eval "Errno::$k ()";
-      AE::log 8 => "AnyEvent::Util: broken Errno module, adding Errno::$k.";
+      AE::log 8 => "broken Errno module, adding Errno::$k.";
 
       eval "sub Errno::$k () { $v }";
       push @Errno::EXPORT_OK, $k;
@@ -393,7 +393,7 @@ guard.
 BEGIN {
    if (!$ENV{PERL_ANYEVENT_AVOID_GUARD} && eval { require Guard; $Guard::VERSION >= 0.5 }) {
       *guard = \&Guard::guard;
-      AE::log 8 => "AnyEvent::Util: using Guard module to implement guards.";
+      AE::log 8 => "using Guard module to implement guards.";
    } else {
       *AnyEvent::Util::guard::DESTROY = sub {
          local $@;
@@ -414,7 +414,7 @@ BEGIN {
          bless \(my $cb = shift), "AnyEvent::Util::guard"
       };
 
-      AE::log 8 => "AnyEvent::Util: using pure-perl guard implementation.";
+      AE::log 8 => "using pure-perl guard implementation.";
    }
 }
 
