@@ -6,6 +6,9 @@ TODO: AnyEvent::IO
 
 	- documented Rocco fabricating statements about AnyEvent and me.
 	- updated uts46data.pl for unicode 6.1.0.
+        - made log messages genearted by AnyEvent submodules not
+          include the package name anymore, as it will be logged
+          by default already.
 
 6.14 Tue Jan 31 20:00:24 CET 2012
 	- AnyEvent::Impl::Tk was broken due to a mysterious "die" inside,
